[package]
name = "flanker-assert-str"
version = "0.5.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Assertions for strings."
repository = "https://github.com/obsidiandynamics/flanker/flanker-assert-str"
keywords = ["str", "assert", "test", "no_std"]

[dependencies]
