[package]
name = "flanker-temp"
version = "0.4.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Helper for working with temporary files."
repository = "https://github.com/obsidiandynamics/flanker/flanker-temp"
keywords = ["temp", "io", "file"]

[dependencies]
thread-id = "4.0.0"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
